test/error/Lsl.mod
MODULE Lsl;

 CONST A* = LSL(1, -1);

 PROCEDURE Go*;
 END Go;

END Lsl.
